# incognito

./: README.md
incognito-engine/docs/: LICENCE.txt
incognito-engine/src/: CMakeLists.txt  incognito.hpp
incognito-engine/src/components/: button.hpp  component.hpp  slider.hpp
incognito-engine/src/engine/: camera.hpp  display.hpp  engine.hpp
incognito-engine/src/inputs/: joystick_input.hpp  key_input.hpp  mouse_input.hpp
incognito-engine/src/objects/: game_object.hpp  object_cabinet.hpp
incognito-engine/src/physics/: box_collision.hpp  rigidbody_2d.hpp
incognito-engine/src/state/: scene.hpp  states.hpp
incognito-engine/src/texture/: assets.hpp
incognito-engine/src/utility/: circle.hpp  clock.hpp  constants.hpp  functions.hpp  vectors.hpp
